correction overflow

--- a/circle.css
+++ b/circle.css
@@ -15,6 +15,7 @@
 .svg{
     width: 250px;
     margin-top: -150px;
+    margin-left: 100px;
 }
 /* #circle{
     margin-left: auto;
@@ -43,8 +44,8 @@
     }
 
     .svg{
-      width: 600px;
-      margin-top: -400px;
-      margin-left: -200px;
+      width: 250px;
+      margin-top: -300px;
+      margin-left: 200px;
     }
 }
